--- a/Sources/Modules/Giny.DofusDrop/Giny.DofusDrop.csproj
+++ b/Sources/Modules/Giny.DofusDrop/Giny.DofusDrop.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <BaseOutputPath>C:\Users\Skinz\Desktop\Giny .NET Core\Giny\Giny.World\bin\Debug\net6.0\Modules</BaseOutputPath>
+    <BaseOutputPath></BaseOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
