Working on WorldEditor Some fixes on world

--- a/Sources/Tools/Giny.WorldView/Giny.WorldView.csproj
+++ b/Sources/Tools/Giny.WorldView/Giny.WorldView.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,8 +14,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebView.WindowsForms" Version="6.0.200-preview.14.5099" />
-    <PackageReference Include="MudBlazor" Version="6.0.9" />
+    <Content Include="icon.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebView.WindowsForms" Version="6.0.553" />
+    <PackageReference Include="MudBlazor" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
