--- a/Sources/Giny.IO/Giny.IO.csproj
+++ b/Sources/Giny.IO/Giny.IO.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SharpZipLib" Version="1.4.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Giny.Core\Giny.Core.csproj" />
   </ItemGroup>
 
