--- a/Sources/Sync/Giny.CustomEnumsBuilder/Giny.CustomEnumsBuilder.csproj
+++ b/Sources/Sync/Giny.CustomEnumsBuilder/Giny.CustomEnumsBuilder.csproj
@@ -8,8 +8,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.6.0" />
+	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.6.0" />
+	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.6.0" />
+	  <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="4.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Giny.Core\Giny.Core.csproj" />
     <ProjectReference Include="..\..\Giny.IO\Giny.IO.csproj" />
+    <ProjectReference Include="..\Giny.AS3\Giny.AS3.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="AS3\ActionIds.as">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
