--- a/Sources/Giny.SpellTree/Giny.SpellTree.csproj
+++ b/Sources/Giny.SpellTree/Giny.SpellTree.csproj
@@ -1,14 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Fonts\Jost-Light.ttf" />
+    <None Remove="Fonts\Jost-Regular.ttf" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Servers\Giny.World\Giny.World.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Fonts\Jost-Light.ttf" />
+    <Resource Include="Fonts\Jost-Regular.ttf" />
   </ItemGroup>
 
 </Project>
