Remove old challenges logic. Fix modules compilation errors.

--- a/Sources/Servers/Giny.World/Giny.World.csproj
+++ b/Sources/Servers/Giny.World/Giny.World.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\..\Giny.Protocol\Giny.Protocol.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Managers\Fights\Challenges\" />
+  </ItemGroup>
+
 </Project>
