--- a/Sources/Modules/Giny.Pokefus/Giny.Pokefus.csproj
+++ b/Sources/Modules/Giny.Pokefus/Giny.Pokefus.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\..\Servers\Giny.World\Giny.World.csproj" />
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="copy &quot;$(TargetDir)\Giny.Pokefus.dll&quot; &quot;$(SolutionDir)\Servers\Giny.World\bin\Debug\net6.0\Modules\Giny.Pokefus.dll&quot;" />
+  </Target>
+
 </Project>
