--- a/Sources/Zaap/Giny.Uplauncher/Giny.Uplauncher.csproj
+++ b/Sources/Zaap/Giny.Uplauncher/Giny.Uplauncher.csproj
@@ -1,20 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
-    <UseWindowsForms>true</UseWindowsForms>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>WinExe</OutputType>
+		<TargetFramework>net6.0-windows</TargetFramework>
+		<Nullable>enable</Nullable>
+		<UseWindowsForms>true</UseWindowsForms>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<ApplicationIcon>Dofus_100.ico</ApplicationIcon>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebView.WindowsForms" Version="6.0.200-preview.14.5099" />
-    <PackageReference Include="MudBlazor" Version="6.0.9" />
-  </ItemGroup>
+	<ItemGroup>
+	  <Content Include="Dofus_100.ico" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Giny.Zaap\Giny.Zaap.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebView.WindowsForms" Version="6.0.553" />
+		<PackageReference Include="MudBlazor" Version="6.11.2" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\Giny.Zaap\Giny.Zaap.csproj" />
+	</ItemGroup>
 
 </Project>
