Challenge bugfix, working on launcher, pushback fix, tackle fix, invisibility fix Add StaticMonsterGroup.cs

--- a/Sources/Zaap/Giny.Uplauncher/Giny.Uplauncher.csproj
+++ b/Sources/Zaap/Giny.Uplauncher/Giny.Uplauncher.csproj
@@ -22,4 +22,10 @@
 		<ProjectReference Include="..\Giny.Zaap\Giny.Zaap.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Content Update="wwwroot\index.html">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
+
 </Project>
