--- a/Sources/Servers/Giny.World/Giny.World.csproj
+++ b/Sources/Servers/Giny.World/Giny.World.csproj
@@ -5,6 +5,7 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<ApplicationIcon>world.ico</ApplicationIcon>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -23,6 +24,7 @@
 	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
 	    <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
 	  </Content>
+	  <Content Include="world.ico" />
 	</ItemGroup>
 
 	<ItemGroup>
